Mon Jan  7 03:11:08 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* include/comp_src.h.in: Update header comment.

Mon Jan  7 02:52:25 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/util.c (mkdbname): Replace with ...
	* include/manconfig.h.in (mkdbname): ... a simpler macro.

Mon Jan  7 02:27:59 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c, libdb/db_storage.h, libdb/mydbm.h, src/catman.c,
	  src/check_mandirs.c, src/convert_name.c, src/globbing.c,
	  src/man.c, src/man.h, src/mandb.c, src/manp.c, src/security.c,
	  src/security.h, src/whatis.c: Replace __inline__ with inline
	  everywhere. Autoconf's handling of the latter is sufficient.
	* include/manconfig.h.in: Remove __inline and __inline__
	  definitions.

Mon Jan  7 02:12:26 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Automatically detect the Debian multibyte patch to
	  groff.

Mon Jan  7 01:14:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (options, parse_opt): Accept -d/--debug.
	* src/lexgrog_test.c (options, parse_opt): Likewise.
	* src/zsoelim.l (options, parse_opt): Likewise.
	* docs/NEWS: Document this.

Mon Jan  7 01:08:39 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/zsoelim.l (options): Fix incorrect description of -C.

Sun Jan  6 15:01:08 GMT 2008  Colin Watson  <cjwatson@debian.org>

	sigaction is specified as non-interruptible; there is no need to
	wrap it with EINTR detection.

	* lib/xsigaction.c: Remove.
	* include/manconfig.h.in (xsigaction): Remove prototype.
	* lib/Makefile.am (libman_a_SOURCES): Remove xsigaction.c.
	* lib/README: Remove xsigaction.c.
	* lib/cleanup.c (sighandler, trap_signal, untrap_signal): Call
	  sigaction rather than xsigaction.
	* lib/pipeline.c (pipeline_start, pipeline_wait,
	  pipeline_install_sigchld, pipeline_pump): Call sigaction rather
	  than xsigaction.

Sun Jan  6 14:46:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* po/nl.po: Update with msgmerge.
